[project]
name = "langchain-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "dotenv>=0.9.9",
    "google-api-python-client>=2.172.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.19",
    "langchain-tavily>=0.2.2",
    "langchain[anthropic,openai]>=0.3.25",
    "langgraph>=0.4.8",
]
